--- a/src/pug/inc/goods.pug
+++ b/src/pug/inc/goods.pug
@@ -13,7 +13,7 @@ include settings.pug
       href: '/catalog-inner.html'
     },
     {
-      caption: 'конячные бокалы',
+      caption: 'коньячные бокалы',
       count: '5 модели',
       href: '/catalog-inner.html'
     },
@@ -41,7 +41,7 @@ include settings.pug
 
 section.goods 
   .goods__wrap
-    p.goods__descr(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы любим эксперементировать с разными моделями посуды, создаём новые цветоые свойства. Для этого разработали уникальную технологию, позволяющую удовлетворить потребности на любой вкус и цвет
+    p.goods__descr(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы любим экспериментировать с разными моделями посуды, постоянно создаём новые цветовые решения. Для этого мы разработали уникальную технологию, позволяющую удовлетворить самый взыскательный вкус.
     .goods__items 
       each good in goods
         a.goods__item(href=good.href data-link="redirect" data-goods="item" data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
