--- a/src/pug/inc/header.pug
+++ b/src/pug/inc/header.pug
@@ -27,8 +27,8 @@ header.header(data-header="block")
           span.header__link-count 0#{ index + 1 }.
     a.header__logo(href="/" data-link="redirect") Glasstar
     .header__callback
-      button.header__callback-btn Перезвоните мне
-      a.header__callback-link(href="tel:+78001234567") 8 800 123 45 67
+      button.header__callback-btn(data-modal="open-callback") Перезвоните мне
+      a.header__callback-link(href="tel:+78001234567") +7 492 412 12 62
     .header__lang 
       a.header__lang-item.header__lang-item--active(href="#") RU
       a.header__lang-item(href="#") ENG
