--- a/src/pug/parts/about-page/about-promo.pug
+++ b/src/pug/parts/about-page/about-promo.pug
@@ -23,7 +23,7 @@ include ../../inc/settings.pug
 section.about-promo
   .about-promo__wrap 
     h1.about-promo__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") завод
-    p.about-promo__subtitle(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Гусь-Хрустальный стекольный завод основан в 1996 году. За 25 лет мы стали лидером производства посуды с титановой обработкой в России. Мы выпускаем 16 миллионов товаров в месяц, и с каждым годом накапливаем производственные мощности
+    p.about-promo__subtitle(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") С 1996 года Гусь-Хрустальный стекольный завод шел по пути модернизации и преобразований. Объединив в себе несколько организаций, в 2019 году предприятие стало корпорацией “Стар”. За 25 лет мы вышли на лидирующую позицию в производстве посуды с титановым покрытием в России. Нашу продукцию выбирают как владельцы серьезных ресторанов и отелей, так и частные покупатели, ценящие эстетику и функциональность. В процессе производства мы не используем красители и краски. Сейчас мы выпускаем 16 миллионов товаров в месяц, и с каждым годом наши производственные мощности только растут.
     .about-promo__items 
       each item in aboutAdvantages
         .about-promo__item(data-sal="slide-up" data-sal-duration="400" data-sal-easing="ease-in-sine")
