--- a/src/pug/parts/card-page/card-advantages.pug
+++ b/src/pug/parts/card-page/card-advantages.pug
@@ -2,19 +2,19 @@
   var cardAdvantages = [
     {
       header: 'Доставка по миру',
-      subheader: 'Доставляем куда угодно в кратчайшие сроки. Гарантируем сохранность товара',
+      subheader: 'Доставляем куда угодно в кратчайшие сроки. Гарантируем сохранность товара.',
     },
     {
       header: 'Превосходное качество',
-      subheader: 'Превосходное качество стекла с титановы покрытием',
+      subheader: 'Превосходное качество стекла с титановым покрытием.',
     },
     {
       header: 'Ваши варианты',
-      subheader: 'Выбирайте любую форму, объём, цвет и мы сделаем для вас уникальный вариант',
+      subheader: 'Выберите любую форму, объём, цвет — и мы сделаем для вас уникальный вариант.',
     },
     {
       header: 'Есть вопросы?',
-      subheader: 'С удовольствием проконсультируем вас по телефону или по почте',
+      subheader: 'С удовольствием проконсультируем вас по телефону или по почте.',
     },
   ];
 
