--- a/src/pug/parts/card-page/card-descr.pug
+++ b/src/pug/parts/card-page/card-descr.pug
@@ -2,15 +2,15 @@
   var cardDescr = [
     {
       key: 'Описание',
-      val: 'Бокалы из превосходного стекла украсят ваш стол и создадут незабываемую атмосферу. Яркие уникальные цвета будут красиво преломлять свет и создавать игру цвета, удовольствие от процесса станет неизбежным. Бокалы не теряют своей красочности при многократной мойке и будут долго радовать вас.',
+      val: 'Бокалы из превосходного стекла украсят ваш стол и создадут незабываемую атмосферу. Яркие, уникальные цвета, красиво преломляющие свет, создадут игру цвета и подарят вам незабываемое эстетическое удовольствие. Бокалы не потеряют своей красочности даже при многократной мойке и будут долго радовать вас.',
     },
     {
       key: 'Доставка и оплата',
-      val: 'Доставка в любую страну. Производится транспортными компаниями, по Москве бесплатно. Среднее время достаки по России — 2 рабочих дня',
+      val: 'Доставка в любую страну. Производится транспортными компаниями, по Москве — бесплатно. Среднее время доставки по России — 2 рабочих дня.',
     },
     {
       key: 'Индивидуальный заказ',
-      val: 'Мы изготовим бокалы любой формы и цвета на заказ, а также можем нанести надписи и логотипы. Поможем определиться с дизайном, обсудим варианты упаковки и доставки к вам. Широкий ассортимент — более 1000 форм и 3000 уникальных цветовых решений на выбор',
+      val: 'Мы изготовим бокалы любой формы и цвета на заказ, а также можем нанести надписи и логотипы. Поможем определиться с дизайном, обсудим варианты упаковки и доставки к вам. Широкий ассортимент — более 1000 форм и 3000 уникальных цветовых решений на выбор.',
     },
   ];
 
