--- a/src/pug/parts/card-page/card-promo.pug
+++ b/src/pug/parts/card-page/card-promo.pug
@@ -74,7 +74,7 @@ include ../../inc/settings.pug
 
 section.card-promo 
   .card-promo__wrap
-    a.card-promo__back(href="#" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") 
+    button.card-promo__back(data-back="btn" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") 
       img(src=`${imgPath}icons/arrow-to-left.svg` alt="arrow-to-left-icon")
       span назад
     .card-promo__descr
