--- a/src/pug/parts/main-page/factory.pug
+++ b/src/pug/parts/main-page/factory.pug
@@ -5,7 +5,7 @@ section.factory
     h2.factory__title(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Завод
     .factory__heading(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") GLASSTAR
     .factory__subblock
-      p.factory__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Гусь-Хрустальный стекольный завод основан в 1996 году. За 25 лет мы стали лидером производства посуды с титановой обработкой в России. Мы выпускаем 16 миллионов товаров в месяц, и с каждым годом увеличиваем производственные мощности
+      p.factory__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") С 1996 года Гусь-Хрустальный стекольный завод шел по пути модернизации и преобразований. Объединив в себе несколько организаций, в 2019 году предприятие стало корпорацией “Стар”. За 25 лет мы вышли на лидирующую позицию в производстве посуды с титановым покрытием в России. Нашу продукцию выбирают как владельцы серьезных ресторанов и отелей, так и частные покупатели, ценящие эстетику и функциональность. В процессе производства мы не используем красители и краски. Сейчас мы выпускаем 16 миллионов товаров в месяц, и с каждым годом наши производственные мощности только растут.
       a.factory__btn.button(href="/about.html" data-sal="fade" data-sal-duration="300" data-sal-easing="ease-in-sine") 
         span подробнее
         svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
