--- a/src/pug/parts/main-page/promo.pug
+++ b/src/pug/parts/main-page/promo.pug
@@ -7,7 +7,7 @@ section.promo
         span GUS-KHRUSTALNY
         span GLASS
         span FACTORY
-      p.promo__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы выпускаем посуду премиум-класса для отелей, ресторанов, баров, и друих оптовых покупателей. Титановое покрытие, благодаря которой посуда приобретает уникальные, неповторимые цветовые свойства — одна из наших особенностей. Доставляем в любую точку мира
+      p.promo__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Мы выпускаем посуду премиум-класса для отелей, ресторанов, баров и других оптовых покупателей. Титановое покрытие, благодаря которому посуда приобретает уникальные, неповторимые цветовые свойства — одна из наших особенностей. Доставляем в любую точку мира.
     button.promo__btn.button(data-modal="open-callback" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
       span коммерческий запрос
       svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
