--- a/src/pug/parts/main-page/technology.pug
+++ b/src/pug/parts/main-page/technology.pug
@@ -11,7 +11,7 @@ section.technology(data-aos="fade-up")
         span.technology__video-btn-text Ti
         span.technology__video-btn-lines
       h3.technology__heading(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Titanium Content
-      p.technology__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Титановое покрытие безвредна, гипоалергенна. В производственном процессе не используется краска
+      p.technology__text(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Титановое покрытие безвредно, гипоалергенно. В производственном процессе не используется краска.
       a.technology__btn.button(href="/technology.html" data-sal="fade" data-sal-duration="300" data-sal-easing="ease-in-sine")
         span подробнее
         svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
