--- a/src/pug/parts/technology-page/technology-tips.pug
+++ b/src/pug/parts/technology-page/technology-tips.pug
@@ -1,6 +1,6 @@
 -
   var technologyTips = [
-    'Мойте изделия из стекла теплой водой с добавлением мягкого средства для мытья посуды без содержания абразивных частиц;', 'При использовании посудомоечной машины, выставьте щадящий короткий режим с низкой температурой. После окончания немедленно откройте дверцу машины;', 'После мытья высушите стеклянную посуду мягким кухонным полотенцем;', 'Во время полирования рюмок и бокалов, не вращайте основание и ножку в разные стороны, при приложении усилия это может привести к излому;', 'С изделием из стекла следует обращаться осторожно, чтобы избежать повреждения, а в последствии и возможного ранения. Особенно не рекомендуется подпускать детей к обращению со стеклом.'
+    'Мойте изделия из стекла теплой водой с добавлением мягкого средства для мытья посуды без абразивных частиц в составе.', 'При использовании посудомоечной машины выставьте щадящий короткий режим с низкой температурой. После окончания немедленно откройте дверцу машины.', 'После мытья протрите стеклянную посуду мягким кухонным полотенцем.', 'Во время полировки рюмок и бокалов не вращайте основание и ножку в разные стороны: при приложении усилия это может привести к излому.', 'С изделием из стекла следует обращаться осторожно, чтобы избежать повреждения, а впоследствии и возможного ранения. Особенно не рекомендуется подпускать детей к обращению со стеклом.'
   ];
 
 section.technology-tips
