--- a/src/pug/parts/technology-page/technology-text.pug
+++ b/src/pug/parts/technology-page/technology-text.pug
@@ -1,6 +1,6 @@
 section.technology-text
   .technology-text__wrap 
-    h3.technology-text__descr(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Потоки ионов и атомов, образованные в результате экологически чистого процесса, осаждаются на поверхности подложки, обеспечивая получение пленок, в диапазоне от долей нанометра до нескольких микрон с высокой твердостью и коррозионной стойкостью.
+    h3.technology-text__descr(data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine") Потоки ионов и атомов, образованные в результате экологически чистого процесса, осаждаются на поверхности подложки, обеспечивая получение пленок толщиной от долей нанометра до нескольких микрон, обладающих высокой твердостью и коррозионной стойкостью.
     a.technology-text__btn.button(href="/catalog.html" data-link="redirect" data-sal="fade" data-sal-duration="400" data-sal-easing="ease-in-sine")
       span смотреть продукцию
       svg(width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg")
