--- a/src/scss/base/header.scss
+++ b/src/scss/base/header.scss
@@ -1,5 +1,5 @@
 .header {
-  overflow-x: hidden;
+  overflow: hidden;
   opacity: 0;
   position: fixed;
   top: 0;
@@ -246,7 +246,7 @@
     left: 0;
     opacity: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #000000;
     display: none;
     flex-flow: column nowrap;
