--- a/src/scss/base/loader.scss
+++ b/src/scss/base/loader.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #000;
   z-index: 100;
   &__wrap {
@@ -14,7 +14,7 @@
     justify-content: space-between;
     height: 100%;
     @include to(1200px) {
-      padding: 30px 20px;
+      padding: 35px 20px;
     }
     .scroll-enabled & {
       @include to(1200px) {
